Got functionality for paths working - attempting crud functionality for challenges & exercises

--- a/src/main/resources/templates/users/viewPath.html
+++ b/src/main/resources/templates/users/viewPath.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns="http://www.w3.org/1999/html">
+      xmlns="http://www.w3.org/1999/html" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>View Path</title>
@@ -9,7 +9,6 @@
 <body>
 <th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
 <div class="container">
-    <div class="container">
         <div class="row">
             <div class="col-4">
                 <h1 th:text="${path.getTitle()}"></h1>
@@ -25,7 +24,7 @@
         </div>
         <div class="row">
             <div class="col-3">
-                <img th:src="'data:image/jpeg;base64,'+${path.getImageDataUrl()}" alt="Achievement Badge" width="256px" height="256px" class="path_image">
+                <img src="#" th:src="'data:image/jpeg;base64,'+${path.getImageDataUrl()}" alt="Achievement Badge" width="256px" height="256px" class="path_image">
 <!--                th:attr="class=${enrolled ? 'path_image_green' : 'path_image_red'}" -->
             </div>
             <div class="col-9">
@@ -37,24 +36,22 @@
                 <div th:text="'Total Points for this path= ' + ${points}"/>
             </div>
 <!--            FOR EVERY CHALLENGE IN PATH -->
+            <div class="row">
             <div th:each="challenge : ${path.getChallenges()}">
-                <div class="col-3">
+                <div class="card col-2">
                     <div class="challengeTitle" th:text="${challenge.getTitle()}" />
 <!--                    FOR EVERY EXERCISE UNDER CHALLENGES -->
                     <div th:text="${challenge.getDescription()}" />
                     <ul>
-                        <div th:each="exercise : ${challenge.getExercises()}">
+                        <a th:each="exercise : ${challenge.getExercises()}">
                             <li th:text="${exercise.getName()}" />
-                        </div>
+                        </a>
                     </ul>
                 </div>
             </div>
+            </div>
         </div>
-    </div>
 </div>
-</div>
-</div>
-
 
 <th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
 </body>
