--- a/src/main/resources/templates/users/allPaths.html
+++ b/src/main/resources/templates/users/allPaths.html
@@ -4,16 +4,29 @@
   <meta charset="UTF-8">
   <title>All Paths</title>
   <th:block th:replace="~{/fragments/header.html :: header}"></th:block>
-</head>
-<body>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <style>
+            .bannerDiv {
+                border: #01295f 2px;
+                background-image: url("/img/hex.png");
+                color: black;
+            }
+        </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+   </head>
+<body style="background-color: #3c5aa6">
+
 <th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
 <div class="container">
-  <div th:each="path : ${paths}" class="col-2">
+  <div th:each="path : ${paths}" class="col-2" >
         <a th:href="@{/paths/{id} (id=${path.id})}">
-          <img th:src="'data:image/jpeg;base64,'+${path.getImageDataUrl()}" alt="Achievement Badge" width="128px" height="128px">
+          <img th:src="'data:image/jpeg;base64,'+${path.getImageDataUrl()}" class="border border-dark" alt="Achievement Badge" width="128px" height="128px">
         </a>
   </div>
 </div>
+
+
 <th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
 </body>
 </html>
