--- a/src/main/resources/templates/users/index.html
+++ b/src/main/resources/templates/users/index.html
@@ -4,19 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Users Panel</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <th:block th:replace="~{/fragments/header.html :: header}"></th:block>
+    <style>
+        #userInfo {
+            border: #01295f 2px;
+            background-image: url("/img/hex.png");
+            color: black;
+        }
+        .bannerDivs {
+            background-color: rgba(255,255,255,.92);
+            color: black;
+            font-size: 20px;
+        }
+    </style>
 </head>
-<body>
+<body style="background-color: #3c5aa6">
 <th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
-<div class="container">
-    <div class="navbar bg-body-tertiary d-flex justify-content-end pe-3">
+<div class="container" style="background-color: #3c5aa6">
+    <div class="navbar bg-body-tertiary d-flex justify-content-end pe-3" >
         <span class="h2 me-auto ms-3"><i class="bi bi-person-badge me-3"></i>Profile</span>
         <a href="/profile/settings" class="btn btn-light" style="float: right;">
             <i class="bi bi-gear me-3"></i>Profile Settings
         </a>
     </div>
-    <div class="row" style="padding-top: 50px">
-        <div class="h6 ps-3">
+    <div class="row d-flex justify-content-center align-items-center my-5 p-3 row rounded" style="padding-top: 50px" id="userInfo" >
+        <div class="h6 ps-3 bannerDivs justify-content-start" style="color: #3c5aa6;">
             <span th:unless="${user.lastName == null or user.firstName == null}" th:text="${user.firstName + ' ' + user.lastName}"/>
             <span th:if="${user.lastName == null or user.firstName == null}">What's your name? <a href="/profile/settings">Set Now</a></span>
 
@@ -35,7 +52,7 @@
         </div>
 
         <!-- Bio Section -->
-        <div class="col-12 col-md-9 mt-3">
+        <div class="col-12 col-md-9 mt-3 bannerDivs">
             <!-- Set profile bio section -->
             <div id="profile_description" th:text="${user.bio}"/>
 
@@ -49,7 +66,7 @@
     <div class="container" th:if="${user.followed_paths != null}">
         <ul class="list-group mt-3" style="clear: both;">
             <li class="list-group-item" th:each="item : ${user.followed_paths}">
-                <img style="border-radius: 50%;" width="40px" height="40px" th:src="'data:image/jpeg;base64,'+${item.imageDataUrl)}"/>
+                <img style="border-radius: 50%;" width="40px" height="40px" th:src="'data:image/jpeg;base64,'+${item.imageDataUrl}"/>
                 <span class="me-auto"><strong th:text="${item.title}"></strong></span>
                 <i class="bi bi-trash3-fill deleteBtn btn btn-warning ms-auto"   th:item="${item.getId()}"></i>
                 <i class="bi bi-pencil-fill editBtn btn btn-light me-2 ms-auto"  th:item="${item.getId()}"></i>
