--- a/src/main/resources/templates/users/settings.html
+++ b/src/main/resources/templates/users/settings.html
@@ -5,7 +5,7 @@
     <title>User Settings</title>
     <th:block th:replace="~{/fragments/header.html :: header}"/>
 </head>
-<body>
+<body style="background-color: #3c5aa6">
   <th:block th:replace="~{/fragments/navbar.html :: navbar}"/>
   <div class="container">
       <div class="navbar bg-body-tertiary mb-3">
