--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -93,10 +93,16 @@
     </div>
     <a href="/admin/index" sec:authorize="isAuthenticated()"><button>Go To Profile</button></a>
 
-    <div class="row hexBg my-3">
-      <div class="col-4 m-0 shadow d-flex justify-content-center align-items-center">
-        <form class="d-flex justify-content-center align-items-center m-0 p-4 pe-0 rounded" sec:authorize="!isAuthenticated()" th:action="@{/login}" th:method="post">
-          <div class="card m-0" style="width: 18rem;">
+    <div class="row hexBg my-3 p-4">
+      <!-- Img Side -->
+      <div class="col col-md-12 col-lg-6 d-flex justify-content-center align-items-center">
+        <img src="/img/login.webp" class="rounded" style="width: 100%">
+      </div>
+
+      <!-- Form Side -->
+      <div class="col-lg-6 m-0 shadow d-flex justify-content-center align-items-center">
+        <form class="d-flex justify-content-center align-items-center m-0 p-4 rounded" style="width: 100%" sec:authorize="!isAuthenticated()" th:action="@{/login}" th:method="post">
+          <div class="card m-0" style="width: 100%;">
             <div class="card-body m-0">
               <div class="card-text">
                 <div class="mb-3">
@@ -129,9 +135,6 @@
             </div>
           </div>
         </form>
-      </div>
-      <div class="col-8 p-4">
-        <img src="/img/lift.webp" class="rounded" style="width: 100%">
       </div>
     </div>
   </div>
