completed tutorial modals

--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -215,11 +215,11 @@
         </div>
     </div>
 
-    <div class="modal fade" id="howTo1" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+    <div class="modal" id="howTo1" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="howTo1Label">Modal 1</h1>
+                    <h1 class="modal-title fs-5" id="howTo1Label">Welcome to the Tutorial!</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -250,15 +250,15 @@
         </div>
     </div>
 
-    <div class="modal fade" id="howTo2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
+    <div class="modal" id="howTo2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="howTo2Label">Modal 2</h1>
+                    <h1 class="modal-title fs-5" id="howTo2Label">Tutorial</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <img src="/img/exercises.drawio.png" style="width: 100%">
+                    <img src="/img/exercises.drawio%20(1).png" style="width: 100%">
                     <!-- Dot Nav -->
                     <div class="row">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="col bi bi-circle" viewBox="0 0 16 16">
@@ -289,11 +289,11 @@
         </div>
     </div>
 
-    <div class="modal fade" id="howTo3" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+    <div class="modal" id="howTo3" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="howTo3Label">Modal 3</h1>
+                    <h1 class="modal-title fs-5" id="howTo3Label">Tutorial</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -327,15 +327,15 @@
         </div>
     </div>
 
-    <div class="modal fade" id="howTo4" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
+    <div class="modal" id="howTo4" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="howTo4Label">Modal 4</h1>
+                    <h1 class="modal-title fs-5" id="howTo4Label">Tutorial</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    Hide this modal and show the first with the button below.
+                    <img src="/img/paths.drawio.png" style="width: 100%;">
                     <!-- Dot Nav -->
                     <div class="row">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="col bi bi-circle" viewBox="0 0 16 16">
